welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: value o
	for(w<-o to length-1) {
               ^